--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
-  
+	
+	<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Comfortaa:100,300,400,800" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500" rel="stylesheet">
   
